# pykms

./: .gitignore  README.md  clone-kmsxx.sh  meson.build  meson_options.txt  pypatch.patch  pyproject.toml
