[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'pybind11']

[project]
name = 'pykms'
version = '0.0.0a1'
description = 'kms++ python bindings'
readme = 'README.md'

[project.urls]
Source = "https://github.com/will-v-pi/pykms"
"kms++ Homepage" = "https://github.com/tomba/kmsxx"

[tool.meson-python.args]
setup = [
    '-Drevision=a4002d2'
]
